# MLP_AUTOGRAD_ENGINE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mlp_engine.hpp
src/: main.cpp
test/: CMakeLists.txt
test/test_mlp_engine/: test_core.cpp
